--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+## Foundation/Sass/Compass
+/bower_components/*
+/app/bower_components/*
+/.sass-cache/*
+*.DS_Store
+/stylesheets/*
